src/main/java/com/clean/arch/example/config/error/model/ErrorCode.java
package com.clean.arch.example.config.error.model;

public enum ErrorCode {
    VALIDATION_ERROR,
}
